# x402-kit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/x402-core/: Cargo.toml
crates/x402-core/src/: errors.rs
crates/x402-core/src/types/: extensions.rs
crates/x402-kit/: Cargo.toml
crates/x402-kit/examples/: axum_middleware.rs  axum_usage.rs  seller_toolkit.rs  v1_axum_middleware.rs  v1_seller_toolkit.rs
crates/x402-kit/src/: concepts.rs  config.rs  core.rs  facilitator.rs  facilitator_client.rs  lib.rs  paywall.rs  transport.rs
crates/x402-kit/src/networks/: evm.rs  svm.rs
crates/x402-kit/src/schemes/: exact_evm.rs  exact_evm_signer.rs  exact_svm.rs  exact_svm_signer.rs  mod.rs
crates/x402-kit/src/seller/: axum.rs  mod.rs  toolkit.rs
crates/x402-kit/src/toolkit/: http_server.rs
crates/x402-kit/src/transports/: http_seller.rs  mod.rs  schema.rs
crates/x402-kit/src/types/: amount.rs  common.rs  mod.rs  schema.rs
crates/x402-kit/src/v1/: facilitator.rs  facilitator_client.rs  mod.rs  signer.rs  transport.rs
crates/x402-kit/src/v1/seller/: axum.rs  mod.rs  toolkit.rs
crates/x402-kit/tests/: define_networks_assets.rs
crates/x402-paywall/: Cargo.toml
crates/x402-paywall/examples/: axum_seller.rs
crates/x402-paywall/src/: axum.rs  errors.rs  lib.rs  paywall.rs  processor.rs
src/: concepts.rs  config.rs  lib.rs
src/networks/: evm.rs  mod.rs  svm.rs
x402-core/: Cargo.toml
x402-core/src/: core.rs  errors.rs  facilitator.rs  lib.rs  transport.rs
x402-core/src/types/: amount.rs  common.rs  extensions.rs  mod.rs  schema.rs
x402-extensions/: Cargo.toml
x402-extensions/src/: bazaar.rs  lib.rs  sign_in_with_x.rs
x402-kit/: Cargo.toml
x402-kit/examples/: actix_web_seller.rs  axum_seller.rs
x402-kit/src/: facilitator_client.rs  lib.rs
x402-kit/src/networks/: evm.rs
x402-kit/src/schemes/: mod.rs
x402-paywall/: Cargo.toml
x402-paywall/src/: errors.rs  lib.rs  paywall.rs  processor.rs
