[package]
name = "x402-kit"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/AIMOverse/x402-kit"
authors = ["Archer <archer@aimo.network>"]
license = "MIT"
description = "A fully modular SDK for building complex X402 payment integrations."

[features]
default = ["facilitator-client"]
facilitator-client = ["reqwest"]

[dependencies]
# === Core Deps ===
hex = { version = "0.4" }
alloy-primitives = { version = "1.4" }
bon = { version = "3.8" }
crypto-bigint = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
url = { version = "2.5" }
solana-pubkey = { version = "4.0" }
solana-signature = { version = "3.1" }
chrono = { version = "0.4", default-features = false, features = ["std"] }
base64 = { version = "0.22" }

# === Feature "facilitator-client" ===
reqwest = { version = "0.12", optional = true, features = ["json"] }
