[package]
name = "x402-kit"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/AIMOverse/x402-kit"
authors = ["Archer <archer@aimo.network>"]
license = "MIT"
description = "A fully modular SDK for building complex X402 payment integrations."

[features]
default = [
    "facilitator-client",
    "tracing",
    "evm-signer",
    "svm-signer",
    "seller",
    "axum",
]
facilitator-client = ["dep:reqwest", "dep:http"]
tracing = ["dep:tracing"]
evm-signer = ["dep:alloy-core", "dep:alloy-signer", "dep:rand"]
svm-signer = ["dep:bincode"]
seller = ["dep:http"]
axum = ["seller", "dep:tower", "dep:axum"]

[dependencies]
# === Core Deps ===
hex = { version = "0.4" }
alloy-primitives = { version = "1.4" }
bon = { version = "3.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "2.0" }
url = { version = "2.5" }
solana-pubkey = { version = "4.0" }
solana-signature = { version = "3.1" }
base64 = { version = "0.22" }

# === Feature "tracing" ===
tracing = { version = "0.1", optional = true }

# === Feature "facilitator-client" ===
reqwest = { version = "0.12", optional = true, features = ["json"] }

# === Feature "evm-signer" ===
alloy-core = { version = "1.4", features = ["sol-types"], optional = true }
alloy-signer = { version = "1.1", optional = true }
rand = { version = "0.9", optional = true }

# === Feature "svm-signer" ===
bincode = { version = "2.0", features = ["serde"], optional = true }

# === Feature "axum" ===
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }

# === Feature "seller" | "facilitator-client" ===
http = { version = "1.4", optional = true }

[dev-dependencies]
url-macro = { version = "0.2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8" }
tracing-subscriber = { version = "0.3" }
alloy = { version = "1" }
