[package]
name = "x402-paywall"
version = "2.0.0"
edition = "2024"
repository = "https://github.com/AIMOverse/x402-kit"
authors = ["Archer <archer@aimo.network>"]
license = "MIT"
description = "A fully modular SDK for building complex X402 payment integrations."

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
x402-kit = { version = "2.0", path = "../x402-kit", default-features = false }
http = { version = "1.4" }
bon = { version = "3.8" }
tracing = { version = "0.1", optional = true }
http-body-util = { version = "0.1" }
bytes = { version = "1.11" }
serde_json = { version = "1.0" }
